# py-json-etag-generator

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml
src/etag_generator/: __init__.py
